<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/textViewBienvenida"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="50dp"
        android:layout_marginTop="42dp"
        android:layout_centerHorizontal="true"
        android:text="@string/registrarse"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText android:id="@+id/editTextContraseña"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/editTextUsuario"
        android:layout_alignLeft="@+id/buttonRegistrarse"
        android:layout_alignStart="@+id/buttonRegistrarse"
        android:layout_marginTop="85dp" />

    <TextView android:id="@+id/textViewContraseña"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="305dp" />

    <EditText android:id="@+id/editTextUsuario"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textViewBienvenida"
        android:layout_alignLeft="@+id/editTextContraseña"
        android:layout_alignStart="@+id/editTextContraseña" />

    <TextView android:id="@+id/textViewNombre"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/nombreUsuario"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toLeftOf="@+id/buttonRegistrarse"
        android:layout_toStartOf="@+id/buttonRegistrarse"
        android:layout_marginTop="175dp" />

    <Button android:id="@+id/buttonRegistrarse"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/boton"
        android:text="@string/registrarse"
        android:onClick="registrarse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

</RelativeLayout>